--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </html>
 <p>
 <ul>
-    I am a geography student at the Unviersity of Edinburgh.
+    I am a geography student at the Unviersity of Edinburgh. Hello Oli! 
 </ul>
 <ul>
   I hope you enjoy my website
